--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout the code
         uses: actions/checkout@v2
 
-      - name: executing remote ssh commands using password
+      - name: Executing remote SSH commands using key
         uses: appleboy/ssh-action@v1.2.0
         with:
           host: 54.91.44.154
@@ -22,4 +22,3 @@ jobs:
           key: ${{ secrets.PRIVATE_SSH_KEY }}
           port: 22
           script: whoami
-        
